# site3d-rag

./: .gitattributes  Dockerfile  README.md  pyproject.toml  run_scrape.py
.github/: README.md
.github/workflows/: ci.yml  hf_sync.yml
api/: logging_config.py  server.py  vector_store.py
data/: chunks.jsonl  pages.json
data/chroma_db/: chroma.sqlite3
data/chroma_db/1cd1e100-80c6-4a2f-97dc-2f9e465fe64a/: index_metadata.pickle
data/chroma_db/209f6f4c-05c3-4f7b-ae0b-a6380dfd23fe/: index_metadata.pickle
scraper/: __main__.py  chunker.py  converter.py  crawler.py  preprocessor.py
static/: index.html  script.js  style.css
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_rate_limit.py  test_api_streaming.py
tests/unit/: test_chunker.py  test_crawler.py  test_preprocessor.py  test_vector_store.py
