[project]
name = "site3d-rag"
version = "0.1.0"
description = "RAG assistant for querying Site3D engineering documentation using ChromaDB and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]
