[project]
name = "site3d-rag"
version = "0.1.0"
description = "RAG assistant for querying Site3D engineering documentation using ChromaDB and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "responses>=0.25",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-beautifulsoup4>=4.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["data/", ".venv/", "tests/"]

[[tool.mypy.overrides]]
module = ["langchain_chroma", "langchain_huggingface", "markdownify"]
ignore_missing_imports = true
